# my-apps

./: .eslintrc.json  .flake8  .gitignore  AGENTS.md  GEMINI.md  README-GEMINI-CLI.md  README.md  dev-end.toml  dev-records  eslint.config.js  issue_body.md  linting_errors_baseline.txt  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_body.md  project-graph.json  run_auth.sh  test_baseline.txt  test_output.txt  tsconfig.json
.devcontainer/: .env.example  .env.example.secret  .tmux.conf  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  public.key  xstartup
.gemini/: settings.json
.github/: pull_request_template.md
apps/security-news-agent/: .coverage  .dockerignore  .env.docker.example  .env.example  .gitignore  DOCKER-README-ja.md  Dockerfile  Makefile  README-ja.md  README.md  TROUBLESHOOTING-ja.md  TROUBLESHOOTING.md  VALIDATION_REPORT-ja.md  VALIDATION_REPORT.md  coverage.xml  docker-compose.yml  flake8_baseline_report.txt  flake8_final_report.txt  project.json  pyproject.toml  test_baseline_report.txt
apps/security-news-agent/scripts/: docker_test.sh  run_tests.py  test_with_real_apis.py
apps/security-news-agent/src/security_news_agent/: __init__.py  __main__.py
apps/security-news-agent/src/security_news_agent/config/: __init__.py  settings.py
apps/security-news-agent/src/security_news_agent/output/: __init__.py  renderer.py
apps/security-news-agent/src/security_news_agent/processing/: __init__.py  mock_clients.py  nodes.py  state.py  workflow.py
apps/security-news-agent/src/security_news_agent/search/: __init__.py  tavily_client.py
apps/security-news-agent/src/security_news_agent/utils/: __init__.py  error_handling.py  helpers.py  logging_config.py
apps/security-news-agent/tests/: __init__.py  conftest.py
apps/security-news-agent/tests/api/: __init__.py  test_real_apis.py
apps/security-news-agent/tests/fixtures/: mock_data.py
apps/security-news-agent/tests/integration/: test_workflow.py
apps/security-news-agent/tests/unit/: test_config.py  test_error_handling.py  test_mock_clients.py  test_output.py  test_processing.py  test_search.py  test_utils.py
development_logs/: 2025-07-22-issue-0-session-1.md  2025-07-23-issue-1-session-1.md  2025-07-23-issue-3-session-2.md  2025-07-24-issue-3-session-3.md  2025-07-26-issue-8-session-1.md  2025-07-27-issue-7-session-1.md  2025-07-28-issue-7-session-2.md  2025-07-29-issue-16-session-1.md  2025-07-30-issue-9-session-1.md  2025-08-07-issue-21-session-1.md  2025-08-26-issue-24-session-1.md  2025-09-11-issue-31-session-1.md  2025-09-13-issue-30-session-1.md  2025-09-15-issue-30-session-2.md  2025-09-15-issue-30-session-3.md  2025-09-16-issue-39-session-1.md  2025-09-20-issue-45-session-1.md  2025-09-21-issue-52-session-1.md  2025-09-22-issue-53-session-1.md  2025-09-23-issue-56-session-1.md  2025-09-24-issue-20-session-1.md  2025-09-24-issue-59-session-1.md  2025-09-26-issue-11-session-1.md  (+54 more)
issues/: 27.md  (+1 more)
(+262 files in other folders)
