[tool.poetry]
name = "security-news-agent"
version = "0.1.0"
description = "An AI agent that collects security news and generates a report."
authors = ["Jules"]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.31.0"
python-dotenv = ">=1.0.0"
langchain = ">=0.2.0"
langchain-core = ">=0.3.0,<0.4.0"
langchain-google-genai = ">=1.0.0"
langgraph = ">=0.2.0,<0.4.0"
langsmith = ">=0.1.0,<0.2.0"
typing-extensions = ">=4.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
