[tool.poetry]
name = "security-news-agent"
version = "0.2.0"
description = "An AI agent that collects security news and generates a report."
authors = ["Jules"]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.31.0"
python-dotenv = ">=1.0.0"
langchain = ">=0.2.0"
langchain-core = ">=0.3.0,<0.4.0"
langchain-google-genai = ">=1.0.0"
langgraph = ">=0.2.0,<0.4.0"
langsmith = ">=0.1.0,<0.2.0"
typing-extensions = ">=4.8.0"
tenacity = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.10.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/security_news_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "api: Tests that require real API access",
    "slow: Slow tests that may take a long time"
]

[tool.coverage.run]
source = ["src/security_news_agent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["security_news_agent"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true